--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,81 @@
-img{
-    max-width: 100px;
+body,
+p,
+h1,
+ul,
+li,
+blockquote {
+  padding: 0px;
+  margin: 0px;
+  font-family: 'Vollkorn', serif;
+}
+
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+/*Estrutura Geral*/
+
+.estrutura {
+  display: grid;
+  grid-template-columns: minmax(160px, 1fr) 3fr 300px; /*Definindo quantidade de colunas*/
+  grid-template-areas: /*Defini as areas dos conteúdos ou estrutura onde cada fica*/
+    "header header header"
+    "sidenav content anuncios"
+    "footer footer footer";
+}
+/*Menu e header*/
+.header {
+  grid-area: header;
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
+  padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+}
+
+.header nav ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.header nav a {
+    display: block;
+    padding: 10px;
+    color: white;
+    font-size: 1.125em;
+    background: rgba(0, 0, 0, .1);
+    border-radius: 5px;
+    transition: 0.1s;
+}
+.header nav a:hover{
+    background: rgba(0, 0, 0, .5);
+}
+
+.header li + li{/*Solução para separa os itens do menu, cada li que vir após o primeiro li add 30px*/
+    margin-left: 30px;
+}
+
+/*Logo*/
+.logo {
+  max-width: 200px;
+}
+.sidenav {
+  grid-area: sidenav;
+}
+
+.content {
+  grid-area: content;
+}
+.anuncios {
+  grid-area: anuncios;
+}
+.footer {
+  grid-area: footer;
 }
