--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ li,
 blockquote {
   padding: 0px;
   margin: 0px;
-  font-family: 'Vollkorn', serif;
+  font-family: "Vollkorn", serif;
 }
 
 li {
@@ -17,7 +17,9 @@ a {
 }
 
 img {
+  display: block;
   max-width: 100%;
+  border-radius: 5px;
 }
 
 /*Estrutura Geral*/
@@ -40,26 +42,27 @@ img {
   align-items: center;
 }
 
-.header nav ul{
-    display: flex;
-    flex-wrap: wrap;
+.header nav ul {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .header nav a {
-    display: block;
-    padding: 10px;
-    color: white;
-    font-size: 1.125em;
-    background: rgba(0, 0, 0, .1);
-    border-radius: 5px;
-    transition: 0.1s;
+  display: block;
+  padding: 10px;
+  color: white;
+  font-size: 1.125em;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  transition: 0.1s;
 }
-.header nav a:hover{
-    background: rgba(0, 0, 0, .5);
+.header nav a:hover {
+  background: rgba(0, 0, 0, 0.5);
 }
 
-.header li + li{/*Solução para separa os itens do menu, cada li que vir após o primeiro li add 30px*/
-    margin-left: 30px;
+.header li + li {
+  /*Solução para separa os itens do menu, cada li que vir após o primeiro li add 30px*/
+  margin-left: 30px;
 }
 
 /*Logo*/
@@ -76,19 +79,18 @@ img {
 }
 
 .sidenav li a {
-    display: block;
-    min-width: 60px;
-    max-width: 100px;
-    margin: 0 auto 30px auto;
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
-    transition: 0.15s;
-
+  display: block;
+  min-width: 60px;
+  max-width: 100px;
+  margin: 0 auto 30px auto;
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  transition: 0.15s;
 }
-.sidenav li a:hover{
-    background: #b07dfb;
+.sidenav li a:hover {
+  background: #b07dfb;
 }
 
 .content {
@@ -96,7 +98,19 @@ img {
 }
 .anuncios {
   grid-area: anuncios;
+  background: #fafbfc;
+  display: grid;
+  align-content: start;
+  padding: 30px;
+  grid-gap: 30px;
 }
 .footer {
   grid-area: footer;
+  background: linear-gradient(135deg, #8844ee, #b07dfb);
+}
+
+.footer p{
+    color: white;
+    text-align: center;
+    padding: 30px;
 }
